--- a/app/src/main/res/layout/fragment_eligibility.xml
+++ b/app/src/main/res/layout/fragment_eligibility.xml
@@ -86,7 +86,7 @@
                 <ImageView
                     android:id="@+id/ivAgeNotify"
                     android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
+                    android:layout_height="@dimen/_15sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:src="@drawable/info_icon"
                     app:layout_constraintBottom_toBottomOf="@id/labelAge"
@@ -98,10 +98,11 @@
                     android:id="@+id/txtAgeNotify"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_3sdp"
                     android:text="@string/age_should_be_min_21_and_max_68"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11ssp"
+                    android:visibility="invisible"
                     android:textStyle="normal|italic"
                     app:layout_constraintBottom_toBottomOf="@id/ivAgeNotify"
                     app:layout_constraintStart_toEndOf="@id/ivAgeNotify"
@@ -187,7 +188,7 @@
                 <ImageView
                     android:id="@+id/ivMonthlyIncomeNotify"
                     android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
+                    android:layout_height="@dimen/_15sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:src="@drawable/info_icon"
                     app:layout_constraintBottom_toBottomOf="@id/labelNetMonthlyIncome"
@@ -199,10 +200,11 @@
                     android:id="@+id/txtMonthlyIncomeNotify"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_3sdp"
                     android:text="@string/income_after_deducting_taxes"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11ssp"
+                    android:visibility="invisible"
                     android:textStyle="normal|italic"
                     app:layout_constraintBottom_toBottomOf="@id/ivMonthlyIncomeNotify"
                     app:layout_constraintStart_toEndOf="@id/ivMonthlyIncomeNotify"
