--- a/app/src/main/res/layout/fragment_eligibility.xml
+++ b/app/src/main/res/layout/fragment_eligibility.xml
@@ -226,9 +226,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_20sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:digits="0123456789"
+                    android:digits="0123456789."
                     android:inputType="number"
                     android:maxLines="1"
+                    android:maxLength="8"
                     android:textAlignment="center"
                     android:textSize="@dimen/_12ssp"
                     app:layout_constraintStart_toStartOf="@id/ivRupeeIconLoan"
@@ -263,9 +264,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_20sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:digits="0123456789"
+                    android:digits="0123456789."
                     android:inputType="number"
                     android:maxLines="1"
+                    android:maxLength="8"
                     android:textAlignment="center"
                     android:textSize="@dimen/_12ssp"
                     app:layout_constraintStart_toStartOf="@id/ivRupeeIconLoan"
@@ -366,7 +368,7 @@
 
 
                 <Button
-                    android:id="@+id/btnSpokeToCustomer"
+                    android:id="@+id/btnCheckEligibility"
                     style="@style/CustomButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_45sdp"
