--- a/app/src/main/res/layout/fragment_document_check_list.xml
+++ b/app/src/main/res/layout/fragment_document_check_list.xml
@@ -33,16 +33,24 @@
             app:layout_constraintTop_toBottomOf="@id/txtAadhar" />
 
         <TextView
-            android:id="@+id/txtForm16"
+            android:id="@+id/txtLatestForm16"
             style="@style/common_text_style"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_20sdp"
-            android:text="Form 16"
+            android:text="Latest Form 16"
             android:textSize="@dimen/_13ssp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txtPan" />
 
-
+        <TextView
+            android:id="@+id/txtLatest"
+            style="@style/common_text_style"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:text="Last 3 months salary slip"
+            android:textSize="@dimen/_13ssp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtLatestForm16" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
