--- a/app/src/main/res/layout/custom_dialog_cheque.xml
+++ b/app/src/main/res/layout/custom_dialog_cheque.xml
@@ -61,9 +61,8 @@
             android:layout_width="@dimen/_170sdp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
-            android:digits="0123456789"
             android:hint="@string/please_enter_ifsc_code"
-            android:inputType="number"
+            android:inputType="textEmailAddress"
             android:maxLength="15"
             android:maxLines="1"
             android:textAlignment="center"
@@ -71,6 +70,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtPleaseEnterBankName" />
 
+
+        <EditText
+            android:id="@+id/edtPleaseEnterAmount"
+            android:layout_width="@dimen/_170sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:digits="0123456789"
+            android:hint="@string/please_enter_amount"
+            android:inputType="number"
+            android:maxLength="15"
+            android:maxLines="1"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edtPleaseEnterIfscCode" />
 
 
         <Button
@@ -84,7 +98,7 @@
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edtPleaseEnterIfscCode" />
+            app:layout_constraintTop_toBottomOf="@id/edtPleaseEnterAmount" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
