Using Raj Sir's given calculateInstallment() with minor change for calculating emi

--- a/app/src/main/res/layout/fragment_eligibility.xml
+++ b/app/src/main/res/layout/fragment_eligibility.xml
@@ -299,9 +299,8 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:gravity="center"
                     android:maxLines="1"
-                    android:editable="false"
-                    android:focusable="false"
-                    android:clickable="false"
+                    android:inputType="number"
+                    android:digits="123456789"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="@id/labelTenure"
